Renamed plugin to Heavy Frame Organizer

--- a/ui.html
+++ b/ui.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Screen Organizer</title><link rel="stylesheet" href="styles.css"><style>body {
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Heavy Frame Organizer</title><link rel="stylesheet" href="styles.css"><style>body {
   font-family: Arial, sans-serif;
   box-sizing: border-box;
   line-height: 1.5;
